unpackaged/main/default/objects/clcommon__Collateral__c/clcommon__Collateral__c.object-meta.xml
<CustomObject>
    <label>Collateral</label>
    <nameField>
        <displayFormat>COL-{00000000}</displayFormat>
        <label>Collateral ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collaterals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>