unpackaged/main/default/objects/clcommon__Collateral__c/fields/clcommon__Property_Type__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Principal Dwelling</fullName>
            </value>
            <value>
                <fullName>Secondary Residence</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>