unpackaged/main/default/objects/clcommon__Collateral__c/fields/clcommon__Year__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Year__c</fullName>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>