unpackaged/main/default/objects/clcommon__Collateral__c/recordTypes/clcommon__Aircraft.recordType-meta.xml
<RecordType>
    <fullName>clcommon__Aircraft</fullName>
    <active>true</active>
    <label>Aircraft</label>
</RecordType>