unpackaged/main/default/objects/clcommon__Collateral__c/recordTypes/clcommon__All_Real_Estate_Types.recordType-meta.xml
<RecordType>
    <fullName>clcommon__All_Real_Estate_Types</fullName>
    <active>true</active>
    <label>All Real Estate Types</label>
</RecordType>