unpackaged/main/default/objects/clcommon__Collateral__c/recordTypes/clcommon__Construction.recordType-meta.xml
<RecordType>
    <fullName>clcommon__Construction</fullName>
    <active>true</active>
    <label>Construction</label>
</RecordType>