unpackaged/main/default/objects/clcommon__Collateral__c/recordTypes/clcommon__Government_Contracts.recordType-meta.xml
<RecordType>
    <fullName>clcommon__Government_Contracts</fullName>
    <active>true</active>
    <label>Government Contracts</label>
</RecordType>