unpackaged/main/default/objects/clcommon__Collateral__c/recordTypes/clcommon__Letter_of_Credit.recordType-meta.xml
<RecordType>
    <fullName>clcommon__Letter_of_Credit</fullName>
    <active>true</active>
    <label>Letter of Credit</label>
</RecordType>