unpackaged/main/default/objects/clcommon__Collateral__c/recordTypes/clcommon__Life_Insurance.recordType-meta.xml
<RecordType>
    <fullName>clcommon__Life_Insurance</fullName>
    <active>true</active>
    <label>Life Insurance</label>
</RecordType>