unpackaged/main/default/objects/clcommon__Collateral__c/recordTypes/clcommon__Mobile_Home.recordType-meta.xml
<RecordType>
    <fullName>clcommon__Mobile_Home</fullName>
    <active>true</active>
    <label>Mobile Home</label>
</RecordType>