unpackaged/main/default/objects/clcommon__Collateral__c/recordTypes/clcommon__Motor_Vehicle.recordType-meta.xml
<RecordType>
    <fullName>clcommon__Motor_Vehicle</fullName>
    <active>true</active>
    <label>Motor Vehicle</label>
</RecordType>