unpackaged/main/default/objects/clcommon__Collateral__c/recordTypes/clcommon__Note_Instrument.recordType-meta.xml
<RecordType>
    <fullName>clcommon__Note_Instrument</fullName>
    <active>true</active>
    <label>Note/Instrument</label>
</RecordType>