unpackaged/main/default/objects/clcommon__Collateral__c/recordTypes/clcommon__Other_Possessory.recordType-meta.xml
<RecordType>
    <fullName>clcommon__Other_Possessory</fullName>
    <active>true</active>
    <label>Other Possessory</label>
</RecordType>