unpackaged/main/default/objects/clcommon__Collateral__c/recordTypes/clcommon__Other_Titled.recordType-meta.xml
<RecordType>
    <fullName>clcommon__Other_Titled</fullName>
    <active>true</active>
    <label>Other Titled</label>
</RecordType>