unpackaged/main/default/objects/clcommon__Collateral__c/recordTypes/clcommon__Pleasure_Boat.recordType-meta.xml
<RecordType>
    <fullName>clcommon__Pleasure_Boat</fullName>
    <active>true</active>
    <label>Pleasure Boat</label>
</RecordType>