unpackaged/main/default/objects/clcommon__Collateral__c/recordTypes/clcommon__Receipts_Bills.recordType-meta.xml
<RecordType>
    <fullName>clcommon__Receipts_Bills</fullName>
    <active>true</active>
    <label>Receipts/Bills</label>
</RecordType>