unpackaged/main/default/objects/clcommon__Collateral__c/recordTypes/clcommon__Savings_CD_s.recordType-meta.xml
<RecordType>
    <fullName>clcommon__Savings_CD_s</fullName>
    <active>true</active>
    <label>Savings/CD's</label>
</RecordType>