unpackaged/main/default/objects/clcommon__Collateral__c/recordTypes/clcommon__Securities.recordType-meta.xml
<RecordType>
    <fullName>clcommon__Securities</fullName>
    <active>true</active>
    <label>Securities</label>
</RecordType>