unpackaged/main/default/objects/clcommon__Collateral__c/recordTypes/clcommon__Ship.recordType-meta.xml
<RecordType>
    <fullName>clcommon__Ship</fullName>
    <active>true</active>
    <label>Ship</label>
</RecordType>