unpackaged/main/default/objects/clcommon__Collateral__c/recordTypes/clcommon__Trailer.recordType-meta.xml
<RecordType>
    <fullName>clcommon__Trailer</fullName>
    <active>true</active>
    <label>Trailer</label>
</RecordType>